--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,4 @@
-stages:
-  - build
-  - test
+stages: [build, test]
 
 variables:
   GIT_SUBMODULE_STRATEGY: normal
@@ -8,9 +6,7 @@ variables:
 .build_template: &build_definition
   stage: build
   artifacts:
-    paths:
-      - build/
-      - .lock-waf*
+    paths: ["build/", ".lock-waf*"]
 
 .test_template: &test_definition
   stage: test
@@ -19,96 +15,88 @@ variables:
       - build/coverage
 
 
-arm_dbg:
+arm32_dbg:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm32
   script: python ./waf configure build -dsT
   variables:
     CC: "arm-linux-gnueabihf-gcc"
     CXX: "arm-linux-gnueabihf-g++"
 
-test:arm_dbg:
+test:arm32_dbg:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm32
   script: python ./waf test --wrapper=qemu-arm
   needs: ["arm_dbg"]
-  variables:
-    LD_LIBRARY_PATH: "/usr/arm-linux-gnueabihf/lib/"
 
 
-arm_rel:
+arm32_rel:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm32
   script: python ./waf configure build -sT
   variables:
     CC: "arm-linux-gnueabihf-gcc"
     CXX: "arm-linux-gnueabihf-g++"
 
-test:arm_rel:
+test:arm32_rel:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm32
   script: python ./waf test --wrapper=qemu-arm
   needs: ["arm_rel"]
-  variables:
-    LD_LIBRARY_PATH: "/usr/arm-linux-gnueabihf/lib/"
 
 
-aarch64_dbg:
+arm64_dbg:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm64
   script: python ./waf configure build -dsT
   variables:
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
 
-test:aarch64_dbg:
+test:arm64_dbg:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm64
   script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["aarch64_dbg"]
-  variables:
-    LD_LIBRARY_PATH: "/usr/aarch64-linux-gnu/lib/"
+  needs: ["arm64_dbg"]
 
 
-aarch64_rel:
+arm64_rel:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm64
   script: python ./waf configure build -sT
   variables:
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
 
-test:aarch64_rel:
+test:arm64_rel:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-arm64
   script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["aarch64_rel"]
-  variables:
-    LD_LIBRARY_PATH: "/usr/aarch64-linux-gnu/lib/"
+  needs: ["arm64_rel"]
 
 
-amd64_dbg:
+x64_dbg:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-x64
   script: python ./waf configure build -dsT
 
-test:amd64_dbg:
+test:x64_dbg:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-x64
   script: python ./waf test
-  needs: ["amd64_dbg"]
+  needs: ["x64_dbg"]
 
 
-amd64_rel:
+x64_rel:
   <<: *build_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-x64
   script: python ./waf configure build -sT
 
-test:amd64_rel:
+test:x64_rel:
   <<: *test_definition
-  image: drobilla/debian-stretch
+  image: lv2plugin/debian-x64
   script: python ./waf test
-  needs: ["amd64_rel"]
+  needs: ["x64_rel"]
 
 
 mingw32_dbg:
