--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -160,22 +160,22 @@ win_dbg:
   <<: *build_definition
   script:
     - python ./waf configure build -dT --no-coverage
-  tags: [windows]
+  tags: [windows,msvc,python]
 
 test:win_dbg:
   <<: *test_definition
   script: python ./waf test
   needs: ["win_dbg"]
-  tags: [windows]
+  tags: [windows,msvc,python]
 
 
 win_rel:
   <<: *build_definition
   script: python ./waf configure build -T --no-coverage
-  tags: [windows]
+  tags: [windows,msvc,python]
 
 test:win_rel:
   <<: *test_definition
   script: python ./waf test
   needs: ["win_rel"]
-  tags: [windows]
+  tags: [windows,msvc,python]
