--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ variables:
 arm32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -dsT --no-bindings
+  script: python ./waf configure build -dST --werror --no-bindings
   variables:
     CC: "arm-linux-gnueabihf-gcc"
     CXX: "arm-linux-gnueabihf-g++"
@@ -32,7 +32,7 @@ test:arm32_dbg:
 arm32_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -sT --no-bindings
+  script: python ./waf configure build -ST --werror --no-bindings
   variables:
     CC: "arm-linux-gnueabihf-gcc"
     CXX: "arm-linux-gnueabihf-g++"
@@ -47,7 +47,7 @@ test:arm32_rel:
 arm64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -dsT --no-bindings
+  script: python ./waf configure build -dST --werror --no-bindings
   variables:
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
@@ -62,7 +62,7 @@ test:arm64_dbg:
 arm64_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -sT --no-bindings
+  script: python ./waf configure build -ST --werror --no-bindings
   variables:
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
@@ -77,7 +77,7 @@ test:arm64_rel:
 x64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -dsT
+  script: python ./waf configure build -dST --werror
 
 test:x64_dbg:
   <<: *test_definition
@@ -89,7 +89,7 @@ test:x64_dbg:
 x64_rel:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -sT
+  script: python ./waf configure build -ST --werror
 
 test:x64_rel:
   <<: *test_definition
@@ -101,7 +101,7 @@ test:x64_rel:
 mingw32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -dsT --no-coverage
+  script: python ./waf configure build -dST --werror --no-coverage
   variables:
     CC: "i686-w64-mingw32-gcc"
     CXX: "i686-w64-mingw32-g++"
@@ -109,7 +109,7 @@ mingw32_dbg:
 mingw32_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -sT --no-coverage
+  script: python ./waf configure build -ST --werror --no-coverage
   variables:
     CC: "i686-w64-mingw32-gcc"
     CXX: "i686-w64-mingw32-g++"
@@ -118,7 +118,7 @@ mingw32_rel:
 mingw64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -dsT --no-coverage
+  script: python ./waf configure build -dST --werror --no-coverage
   variables:
     CC: "x86_64-w64-mingw32-gcc"
     CXX: "x86_64-w64-mingw32-g++"
@@ -126,7 +126,7 @@ mingw64_dbg:
 mingw64_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -sT --no-coverage
+  script: python ./waf configure build -ST --werror --no-coverage
   variables:
     CC: "x86_64-w64-mingw32-gcc"
     CXX: "x86_64-w64-mingw32-g++"
@@ -134,7 +134,7 @@ mingw64_rel:
 
 mac_dbg:
   <<: *build_definition
-  script: python ./waf configure build -dsT --no-coverage
+  script: python ./waf configure build -dST --werror --no-coverage
   tags: [macos]
 
 test:mac_dbg:
@@ -146,7 +146,7 @@ test:mac_dbg:
 
 mac_rel:
   <<: *build_definition
-  script: python ./waf configure build -sT --no-coverage
+  script: python ./waf configure build -ST --werror --no-coverage
   tags: [macos]
 
 test:mac_rel:
@@ -159,7 +159,7 @@ test:mac_rel:
 win_dbg:
   <<: *build_definition
   script:
-    - python ./waf configure build -dT --no-coverage
+    - python ./waf configure build -dST --werror --no-coverage
   tags: [windows,msvc,python]
 
 test:win_dbg:
@@ -171,7 +171,7 @@ test:win_dbg:
 
 win_rel:
   <<: *build_definition
-  script: python ./waf configure build -T --no-coverage
+  script: python ./waf configure build -ST --werror --no-coverage
   tags: [windows,msvc,python]
 
 test:win_rel:
