Clean up CI configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -158,8 +158,7 @@ test:mac_rel:
 
 win_dbg:
   <<: *build_definition
-  script:
-    - python ./waf configure build -dST --werror --no-coverage
+  script: python ./waf configure build -dST --werror --no-coverage
   tags: [windows,msvc,python]
 
 test:win_dbg:
