--- a/doc/reference.doxygen.in
+++ b/doc/reference.doxygen.in
@@ -800,10 +800,10 @@ WARN_LOGFILE           =
 INPUT                  = @LV2KIT_SRCDIR@/doc/mainpage.md \
                          @LV2KIT_SRCDIR@/libs/lv2/lv2/ \
                          @LV2KIT_SRCDIR@/libs/serd/include/serd/ \
-                         @LV2KIT_SRCDIR@/libs/sord/sord/ \
-                         @LV2KIT_SRCDIR@/libs/sratom/sratom/ \
-                         @LV2KIT_SRCDIR@/libs/suil/suil/ \
-                         @LV2KIT_SRCDIR@/libs/lilv/lilv/
+                         @LV2KIT_SRCDIR@/libs/sord/include/sord/ \
+                         @LV2KIT_SRCDIR@/libs/sratom/include/sratom/ \
+                         @LV2KIT_SRCDIR@/libs/suil/include/suil/ \
+                         @LV2KIT_SRCDIR@/libs/lilv/include/lilv/
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -1885,7 +1885,7 @@ RTF_SOURCE_CODE        = NO
 # classes and files.
 # The default value is: NO.
 
-GENERATE_MAN           = YES
+GENERATE_MAN           = NO
 
 # The MAN_OUTPUT tag is used to specify where the man pages will be put. If a
 # relative path is entered the value of OUTPUT_DIRECTORY will be put in front of
