--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,12 @@
 [submodule "suil"]
 	path = subprojects/suil
 	url = ../suil.git
-[submodule "waflib"]
-	path = waflib
-	url = ../../drobilla/autowaf.git
 [submodule "sord"]
 	path = subprojects/sord
 	url = ../../drobilla/sord.git
+[submodule "subprojects/exess"]
+	path = subprojects/exess
+	url = git@gitlab.com:drobilla/exess.git
+[submodule "subprojects/rerex"]
+	path = subprojects/rerex
+	url = git@gitlab.com:drobilla/rerex.git
