--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,198 +1,159 @@
-stages: [build, test]
-
-variables:
-  GIT_SUBMODULE_STRATEGY: normal
+stages:
+  - build
+  # - deploy
 
 .build_template: &build_definition
   stage: build
-  artifacts:
-    paths: ["build/", ".lock-waf*"]
-
-.test_template: &test_definition
-  stage: test
-  artifacts:
-    paths: [build/coverage]
-
 
 arm32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -dST --werror --no-bindings
-  variables:
-    CC: "arm-linux-gnueabihf-gcc"
-    CXX: "arm-linux-gnueabihf-g++"
-
-test:arm32_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-arm32
-  script: python ./waf test --wrapper=qemu-arm
-  needs: ["arm32_dbg"]
-
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/arm-linux-gnueabihf.ini -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 arm32_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -ST --werror --no-bindings
-  variables:
-    CC: "arm-linux-gnueabihf-gcc"
-    CXX: "arm-linux-gnueabihf-g++"
-
-test:arm32_rel:
-  <<: *test_definition
-  image: lv2plugin/debian-arm32
-  script: python ./waf test --wrapper=qemu-arm
-  needs: ["arm32_rel"]
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/arm-linux-gnueabihf.ini -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 
 arm64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -dST --werror --no-bindings
-  variables:
-    CC: "aarch64-linux-gnu-gcc"
-    CXX: "aarch64-linux-gnu-g++"
-
-test:arm64_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-arm64
-  script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["arm64_dbg"]
-
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/aarch64-linux-gnu.ini -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 arm64_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -ST --werror --no-bindings
-  variables:
-    CC: "aarch64-linux-gnu-gcc"
-    CXX: "aarch64-linux-gnu-g++"
-
-test:arm64_rel:
-  <<: *test_definition
-  image: lv2plugin/debian-arm64
-  script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["arm64_rel"]
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/aarch64-linux-gnu.ini -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 
 x64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -dST --werror
-
-test:x64_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-x64
-  script: python ./waf test
-  needs: ["x64_dbg"]
-
+  script:
+    - meson setup build -Dbuildtype=debug -Ddocs=enabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
+  artifacts:
+    paths:
+      - build/doc
 
 x64_rel:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -ST --werror
+  script:
+    - meson setup build -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
-test:x64_rel:
-  <<: *test_definition
+
+x64_static:
+  <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf test
-  needs: ["x64_rel"]
+  script:
+    - meson setup build -Ddefault_library=static -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 
 x64_sanitize:
   <<: *build_definition
   image: lv2plugin/debian-x64-clang
-  script: python ./waf configure build -ST --werror --no-coverage --no-bindings
+  script:
+    - meson setup build -Db_lundef=false -Dbuildtype=plain -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
   variables:
     CC: "clang"
-    CFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
     CXX: "clang++"
-    CXXFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
-    LINKFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
-
-test:x64_sanitize:
-  <<: *test_definition
-  image: lv2plugin/debian-x64-clang
-  script: python ./waf test
-  needs: ["x64_sanitize"]
+    CFLAGS: "-fno-sanitize-recover=all -fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
+    CXXFLAGS: "-fno-sanitize-recover=all -fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
+    LDFLAGS: "-fno-sanitize-recover=all -fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
 
 
 mingw32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/i686-w64-mingw32.ini -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
   variables:
-    CC: "i686-w64-mingw32-gcc"
-    CXX: "i686-w64-mingw32-g++"
+    MESON_TESTTHREADS: "1"
+    WINEPATH: "Z:\\usr\\lib\\gcc\\i686-w64-mingw32\\8.3-win32"
 
 mingw32_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -ST --werror --no-coverage
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/i686-w64-mingw32.ini -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
   variables:
-    CC: "i686-w64-mingw32-gcc"
-    CXX: "i686-w64-mingw32-g++"
+    MESON_TESTTHREADS: "1"
+    WINEPATH: "Z:\\usr\\lib\\gcc\\i686-w64-mingw32\\8.3-win32"
 
 
 mingw64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/x86_64-w64-mingw32.ini -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
   variables:
-    CC: "x86_64-w64-mingw32-gcc"
-    CXX: "x86_64-w64-mingw32-g++"
+    MESON_TESTTHREADS: "1"
 
 mingw64_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -ST --werror --no-coverage
+  script:
+    - meson setup build --cross-file=/usr/share/meson/cross/x86_64-w64-mingw32.ini -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
   variables:
-    CC: "x86_64-w64-mingw32-gcc"
-    CXX: "x86_64-w64-mingw32-g++"
+    MESON_TESTTHREADS: "1"
 
 
 mac_dbg:
   <<: *build_definition
-  script: python ./waf configure build -dST --werror --no-coverage
   tags: [macos]
-
-test:mac_dbg:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["mac_dbg"]
-  tags: [macos]
-
+  script:
+    - meson setup build -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 mac_rel:
   <<: *build_definition
-  script: python ./waf configure build -ST --werror --no-coverage
   tags: [macos]
-
-test:mac_rel:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["mac_rel"]
-  tags: [macos]
+  script:
+    - meson setup build -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 
 win_dbg:
   <<: *build_definition
-  script: python ./waf configure build -dST --werror --no-coverage
-  tags: [windows,msvc,python]
-
-test:win_dbg:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["win_dbg"]
-  tags: [windows,msvc,python]
-
+  tags: [windows,meson]
+  script:
+    - meson setup build -Dbuildtype=debug -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
 win_rel:
   <<: *build_definition
-  script: python ./waf configure build -ST --werror --no-coverage
-  tags: [windows,msvc,python]
+  tags: [windows,meson]
+  script:
+    - meson setup build -Dbuildtype=release -Ddocs=disabled -Dstrict=true -Dwerror=true
+    - ninja -C build test
 
-test:win_rel:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["win_rel"]
-  tags: [windows,msvc,python]
+# pages:
+#   stage: deploy
+#   script:
+#     - mkdir public
+#     - mkdir public/c
+#     - mv build/doc/c/singlehtml/ public/c/singlehtml/
+#   dependencies:
+#     - x64_dbg
+#   artifacts:
+#     paths:
+#       - public
+#   only:
+#     - master
