Disable bindings by default

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,7 +1,7 @@
-option('bindings_cpp', type: 'feature', value: 'auto', yield: true,
+option('bindings_cpp', type: 'feature', value: 'disabled', yield: true,
        description: 'Build C++ bindings')
 
-option('bindings_py', type: 'feature', value: 'auto', yield: true,
+option('bindings_py', type: 'feature', value: 'disabled', yield: true,
        description: 'Build Python bindings')
 
 option('docs', type: 'feature', value: 'auto', yield: true,
