--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-stages: [build, test]
+stages: [build]
 
 variables:
   GIT_SUBMODULE_STRATEGY: normal
@@ -17,91 +17,67 @@ variables:
 arm32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -dST --werror --no-bindings
+  script:
+    - python3 ./waf configure build test -v -ST --werror --no-bindings --no-coverage --wrapper=qemu-arm-static
   variables:
+    AR: "arm-linux-gnueabihf-ar"
     CC: "arm-linux-gnueabihf-gcc"
+    CFLAGS: "-O0 -g -D_FILE_OFFSET_BITS=64"
     CXX: "arm-linux-gnueabihf-g++"
-
-test:arm32_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-arm32
-  script: python ./waf test --wrapper=qemu-arm
-  needs: ["arm32_dbg"]
-
+    CXXFLAGS: "-O0 -g -D_FILE_OFFSET_BITS=64"
 
 arm32_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm32
-  script: python ./waf configure build -ST --werror --no-bindings
+  script:
+    - python3 ./waf configure build test -ST --werror --no-bindings --no-coverage --wrapper=qemu-arm-static
   variables:
+    AR: "arm-linux-gnueabihf-ar"
     CC: "arm-linux-gnueabihf-gcc"
+    CFLAGS: "-O2 -DNDEBUG -D_FILE_OFFSET_BITS=64"
     CXX: "arm-linux-gnueabihf-g++"
-
-test:arm32_rel:
-  <<: *test_definition
-  image: lv2plugin/debian-arm32
-  script: python ./waf test --wrapper=qemu-arm
-  needs: ["arm32_rel"]
+    CXXFLAGS: "-O2 -DNDEBUG -D_FILE_OFFSET_BITS=64"
 
 
 arm64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -dST --werror --no-bindings
+  script:
+    - python3 ./waf configure build test -dST --werror --no-bindings --no-coverage --wrapper=qemu-aarch64-static
   variables:
+    AR: "aarch64-linux-gnu-ar"
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
-
-test:arm64_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-arm64
-  script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["arm64_dbg"]
-
 
 arm64_rel:
   <<: *build_definition
   image: lv2plugin/debian-arm64
-  script: python ./waf configure build -ST --werror --no-bindings
+  script:
+    - python3 ./waf configure build test -ST --werror --no-bindings --no-coverage --wrapper=qemu-aarch64-static
   variables:
+    AR: "aarch64-linux-gnu-ar"
     CC: "aarch64-linux-gnu-gcc"
     CXX: "aarch64-linux-gnu-g++"
-
-test:arm64_rel:
-  <<: *test_definition
-  image: lv2plugin/debian-arm64
-  script: python ./waf test --wrapper=qemu-aarch64
-  needs: ["arm64_rel"]
 
 
 x64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -dST --werror
-
-test:x64_dbg:
-  <<: *test_definition
-  image: lv2plugin/debian-x64
-  script: python ./waf test
-  needs: ["x64_dbg"]
-
+  script:
+    - python3 ./waf configure build test -dST --werror
 
 x64_rel:
   <<: *build_definition
   image: lv2plugin/debian-x64
-  script: python ./waf configure build -ST --werror
-
-test:x64_rel:
-  <<: *test_definition
-  image: lv2plugin/debian-x64
-  script: python ./waf test
-  needs: ["x64_rel"]
+  script:
+    - python3 ./waf configure build test -ST --werror
 
 
 x64_sanitize:
   <<: *build_definition
   image: lv2plugin/debian-x64-clang
-  script: python ./waf configure build -ST --werror --no-coverage --no-bindings
+  script:
+    - python3 ./waf configure build test -ST --werror --no-coverage --no-bindings --no-coverage
   variables:
     CC: "clang"
     CFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
@@ -109,26 +85,27 @@ x64_sanitize:
     CXXFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
     LINKFLAGS: "-fsanitize=address -fsanitize=undefined -fsanitize=float-divide-by-zero -fsanitize=unsigned-integer-overflow -fsanitize=implicit-conversion -fsanitize=local-bounds -fsanitize=nullability"
 
-test:x64_sanitize:
-  <<: *test_definition
-  image: lv2plugin/debian-x64-clang
-  script: python ./waf test
-  needs: ["x64_sanitize"]
+
+# TODO: Run tests on MinGW
 
 
 mingw32_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - python3 ./waf configure build -dST --werror --no-coverage --wrapper=wine
   variables:
+    AR: "i686-w64-mingw32-ar"
     CC: "i686-w64-mingw32-gcc"
     CXX: "i686-w64-mingw32-g++"
 
 mingw32_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw32
-  script: python ./waf configure build -ST --werror --no-coverage
+  script:
+    - python3 ./waf configure build -ST --werror --no-coverage --wrapper=wine
   variables:
+    AR: "i686-w64-mingw32-ar"
     CC: "i686-w64-mingw32-gcc"
     CXX: "i686-w64-mingw32-g++"
 
@@ -136,63 +113,45 @@ mingw32_rel:
 mingw64_dbg:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - python3 ./waf configure build -dST --werror --no-coverage --wrapper=wine
   variables:
+    AR: "x86_64-w64-mingw32-ar"
     CC: "x86_64-w64-mingw32-gcc"
     CXX: "x86_64-w64-mingw32-g++"
 
 mingw64_rel:
   <<: *build_definition
   image: lv2plugin/debian-mingw64
-  script: python ./waf configure build -ST --werror --no-coverage
+  script:
+    - python3 ./waf configure build -ST --werror --no-coverage --wrapper=wine
   variables:
+    AR: "x86_64-w64-mingw32-ar"
     CC: "x86_64-w64-mingw32-gcc"
     CXX: "x86_64-w64-mingw32-g++"
 
 
 mac_dbg:
   <<: *build_definition
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - python ./waf configure build test -dST --werror --no-coverage
   tags: [macos]
-
-test:mac_dbg:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["mac_dbg"]
-  tags: [macos]
-
 
 mac_rel:
   <<: *build_definition
-  script: python ./waf configure build -ST --werror --no-coverage
-  tags: [macos]
-
-test:mac_rel:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["mac_rel"]
+  script:
+    - python ./waf configure build test -ST --werror --no-coverage
   tags: [macos]
 
 
 win_dbg:
   <<: *build_definition
-  script: python ./waf configure build -dST --werror --no-coverage
+  script:
+    - python3 ./waf configure build test -dST --werror --no-coverage
   tags: [windows,msvc,python]
-
-test:win_dbg:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["win_dbg"]
-  tags: [windows,msvc,python]
-
 
 win_rel:
   <<: *build_definition
-  script: python ./waf configure build -ST --werror --no-coverage
-  tags: [windows,msvc,python]
-
-test:win_rel:
-  <<: *test_definition
-  script: python ./waf test
-  needs: ["win_rel"]
+  script:
+    - python3 ./waf configure build test -ST --werror --no-coverage
   tags: [windows,msvc,python]
