--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "sord"]
 	path = subprojects/sord
 	url = ../../drobilla/sord.git
+[submodule "subprojects/zix"]
+	path = subprojects/zix
+	url = ../../drobilla/zix.git
