--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Copyright 2019-2023 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: 0BSD OR ISC
+
 build/
 subprojects/packagecache/
 subprojects/sphinxygen-1.0.0/
