--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+# Copyright 2019-2023 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: 0BSD OR ISC
+
 [submodule "serd"]
 	path = subprojects/serd
 	url = ../../drobilla/serd.git
