--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,6 @@
+# Copyright 2022-2023 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: 0BSD OR ISC
+
 option('cxx', type: 'boolean', value: true, yield: true,
        description: 'Build C++ components')
 
